# otus_architecture_and_design_patterns

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
homeworks/homework_1/: README.md  solver.py
homeworks/homework_2/: README.md  actions.py  adapters.py  interfaces.py  main.py  models.py
homeworks/homework_3/: README.md
homeworks/homework_4/: README.md
homeworks/homework_5/: README.md  __init__.py
homeworks/homework_6/: README.md
homeworks/space_battle/: README.md  actions.py  adapter_generator.py  adapters.py  commands.py  exceptions.py  interfaces.py  ioc.py  main.py  models.py  uobject.py
tests/homework_1/: test_solver.py
tests/homework_2/: test_move.py  test_rotate.py
tests/space_battle/: conftest.py  test_adapter_generator.py  test_exception_handlers.py  test_ioc_concurrent.py  test_ioc_unit.py  test_move.py  test_rotate.py
tests/space_battle/commands/: test_exceptions.py  test_macro_command.py  test_move.py  test_rotate.py
