[project]
name = "otus_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Сильных Андрей Сергеевич",email = "den41_apple@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"