[project]
name = "otus_project"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Сильных Андрей Сергеевич", email = "den41_apple@bk.ru" }]

[tool.uv]
dev-dependencies = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "coveralls==4.0.1",
    "ruff==0.12.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-vvx --cov=homeworks --cov-report='xml:coverage.xml'"

[tool.ruff]
line-length = 100
target-version = "py312"

# Включить все правила
lint.select = ["ALL"]

# Игнорировать отдельные правила (если мешают)
lint.ignore = [
    "D", # игнорировать pydocstyle
    "ANN", # игнорировать обязательные type hints
    "EM101",
    "TRY003",
    "PLW1641",
    "BLE001",
    "T201",
    "RUF001",
    "RUF002",
    "RUF003",
    "COM812",
    "N818",
    "EM102",
    "PLR0911",
    "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "PT011",
    "PT017",
    "PT012",
    "PLR2004",
    "B017",
    "TRY002",
    "ARG001",
    "PT013",
]